--- a/Configs/eww/.config/eww/eww.scss
+++ b/Configs/eww/.config/eww/eww.scss
@@ -1,5 +1,5 @@
-$background: rgba(21, 22, 36, 0.4);
-$background_full: rgba(21, 22, 36, 1);
+$background: rgba(26, 27, 38, 0.5);
+$background_full: rgba(21, 22, 36, 0.6);
 $foreground: rgba(32, 30, 40, 0.75);
 
 $gray: #414868;
@@ -91,7 +91,8 @@ $radius: 0px;
 }
 
 .occupied {
-    color: white;
+    // color: #f7768e;
+    color: rgba($color3, 0.6);
     font-size: 1.4em;
 }
 
