--- a/Configs/eww/.config/eww/eww.scss
+++ b/Configs/eww/.config/eww/eww.scss
@@ -1,4 +1,5 @@
 $background: rgba(26, 27, 38, 0.5);
+$background_transparent: rgba(26, 27, 38, 0.1);
 $background_full: rgba(21, 22, 36, 0.6);
 $foreground: rgba(32, 30, 40, 0.75);
 
@@ -23,8 +24,8 @@ $radius: 0px;
 }
 
 .bar {
-    background-color: $background;
-    background: $background;
+    background-color: $background_transparent;
+    background: $background_transparent;
     box-shadow: 1px 2px 10px $background;
     padding: 4px;
     border-radius: $radius;
@@ -287,11 +288,11 @@ tooltip {
     color: #ffcc00; /* Pacman yellow */
 }
 
-// Volume widget styling - add to your eww.scss file
+// Volume widget styling
 .volume-widget {
     color: $color9;
     margin-top: 1px;
-    margin-right: -6px;
+    margin-right: -8px;
 
     .volume-icon-btn {
         padding: 0;
@@ -372,30 +373,33 @@ tooltip {
     }
 }
 
-// Network widget styling - add to your eww.scss file
+// Network widget styling
 .network-widget {
-    padding: 0 8px;
+    padding: 0 4px;
     color: $color9;
 
     .network-down,
     .network-up {
-        margin: 0 2px;
+        margin: 0 8px;
     }
 
     .network-icon {
         font-size: 16px;
-        margin-right: 2px;
+        margin-right: 6px;
     }
 
     .down-icon {
+        padding-top: 2px;
         color: $color3; // Blue for download
     }
 
     .up-icon {
+        padding-top: 1px;
         color: $color7; // Green for upload
     }
 
     .network-text {
+        padding-top: 1px;
         font-size: 14px;
         min-width: 56px;
     }
